--- a/index.html
+++ b/index.html
@@ -17,13 +17,21 @@
 </div>
 
 <script>
-document.getElementById('data-form').addEventListener('submit', function(event) {
+document.getElementById('data-form').addEventListener('submit', async function(event) {
     event.preventDefault();
     
-   const apiKey = '3dd0c70a-e650-4e89-ab37-64193c980a7b';
-const apiUrl = 'http://127.0.0.1:5000/store';
+    const dataInput = document.getElementById('data');
+    const data = dataInput.value.trim(); // Get the trimmed input data
+    
+    if (!data) {
+        document.getElementById('feedback').textContent = 'Please enter data to store.';
+        return;
+    }
 
-async function storeData(data) {
+    // Example API Key and URL - these should be dynamically generated from your server
+    const apiKey = '3dd0c70a-e650-4e89-ab37-64193c980a7b'; // Replace with the API key generated from your server
+    const apiUrl = 'http://127.0.0.1:5000/store'; // Replace with your server's URL
+
     try {
         const response = await fetch(apiUrl, {
             method: 'POST',
@@ -36,14 +44,16 @@ async function storeData(data) {
 
         if (response.ok) {
             const result = await response.json();
+            document.getElementById('feedback').textContent = 'Data stored successfully!';
             console.log('Data stored successfully:', result);
         } else {
+            document.getElementById('feedback').textContent = 'Error storing data: ' + response.statusText;
             console.error('Error storing data:', response.statusText);
         }
     } catch (error) {
+        document.getElementById('feedback').textContent = 'Network error: ' + error.message;
         console.error('Network error:', error);
     }
-}
 });
 </script>
 
